<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/coffee3"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Fragments.AddUpdate">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- EditText for getttaskEntrytask description input -->
        <EditText
            android:id="@+id/editTextCoffee"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:hint="@string/hint_coffee"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            android:textStyle="italic" />


        <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->

        <ImageView
            android:id="@+id/speak"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:src="@android:drawable/ic_btn_speak_now" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextInstruction"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:hint="@string/hint_add_instruction"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="italic" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/priority_string"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

    <!-- RadioGroup for visible selection of a priority -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/priority1"
            android:checked="true"
            android:text="@string/high_priority"
            android:textColor="@color/design_default_color_background"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/priority2"
            android:text="@string/med_priority"
            android:textColor="@color/design_default_color_background"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/priority3"
            android:text="@string/low_priority"

            android:textColor="@color/design_default_color_on_primary"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"

        android:textColor="@android:color/primary_text_dark" />
    <Button
        android:id="@+id/deleteButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_delete"
        android:textColor="@android:color/primary_text_dark"
        android:visibility="invisible"/>

</LinearLayout>